# machine_learning_project

./: .gitignore  README.md  Untitled.ipynb  main.py  pyproject.toml
.virtual_documents/notebooks/: amazon.ipynb
amazon-sales-forecast/: main.py  pyproject.toml
notebooks/: Notebook_Alan.ipynb  amazon.ipynb  amazon_Pedro.ipynb  amazon_pedro.ipynb  analysis_charul.ipynb  cleaning_amazon_pati.ipynb
notebooks/.virtual_documents/: amazon_pedro.ipynb
